support vagrant 1.1 configuration to get shell provisioning working

--- a/cookbooks/vagrant/templates/default/Vagrantfile.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.erb
@@ -1,11 +1,9 @@
-Vagrant::Config.run do |config|
+Vagrant.configure("2") do |config|
   config.vm.box = "<%= node[:vagrant][:box] %>"
   config.vm.base_mac = "<%= node[:vagrant][:base_mac] %>"
-  Vagrant::Config.run do |config|
-    <% if node[:vagrant][:provision] && node[:vagrant][:provision][:shell] %>
-      config.vm.provision :shell, :path => "<%= node[:vagrant][:provision][:shell][:path] %>"
-    <% end %>
-  end
+  <% if node[:vagrant][:provision] && node[:vagrant][:provision][:shell] %>
+  config.vm.provision :shell, :path => "<%= node[:vagrant][:provision][:shell][:path] %>"
+  <% end %>
 end
 
 # vi: set ft=ruby :
