Need to load vagrant-aws due to bundler/gems/vagrant-aws hack

--- a/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
@@ -1,3 +1,5 @@
+require "vagrant-aws"
+
 Vagrant.configure("2") do |config|
   config.vm.box = "<%= node[:vagrant][:box] %>"
   <% if node[:vagrant][:provision] && node[:vagrant][:provision][:shell] %>
