--- a/cookbooks/vagrant/templates/default/Vagrantfile.virtualbox.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.virtualbox.erb
@@ -2,7 +2,9 @@ Vagrant.configure("2") do |config|
   config.vm.box = "<%= node[:vagrant][:box] %>"
   config.vm.base_mac = "<%= node[:vagrant][:base_mac] %>"
   <% if node[:vagrant][:provision] && node[:vagrant][:provision][:shell] %>
-  config.vm.provision :shell, :path => "<%= node[:vagrant][:provision][:shell][:path] %>"
+  config.vm.provision :shell, 
+                      :path => "<%= node[:vagrant][:provision][:shell][:path] %>", 
+                      :args => "<%= node[:vagrant][:provision][:shell][:args] %>"
   <% end %>
 end
 
