--- a/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
@@ -11,7 +11,9 @@ Vagrant.configure("2") do |config|
     aws.secret_access_key = "<%= node[:vagrant][:secret_access_key] %>"
     aws.keypair_name = "<%= node[:vagrant][:keypair_name] %>"
 
+    <% if node[:vagrant][:ami] %>
     aws.ami = "<%= node[:vagrant][:ami] %>"
+    <% end %>
     aws.instance_type = "<%= node[:vagrant][:instance_type] %>"
 
     aws.ssh_username = "<%= node[:vagrant][:ssh_username] %>"
