--- a/cookbooks/vagrant/templates/default/Vagrantfile.docker.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.docker.erb
@@ -2,16 +2,26 @@ require "vagrant-shell"
 
 Vagrant.configure("2") do |config|
   config.vm.box = "<%= node[:vagrant][:box] %>"
-  <% if node[:vagrant][:provision] && node[:vagrant][:provision][:shell] %>
-  config.vm.provision :shell, :path => "<%= node[:vagrant][:provision][:shell][:path] %>"
+
+  <% if node[:vagrant][:ssh_username] %>
+  config.ssh.username = "<%= node[:vagrant][:ssh_username] %>"
   <% end %>
 
-  config.ssh.username = "<%= node[:vagrant][:ssh_username] %>"
+  <% if node[:vagrant][:ssh_private_key_path] %>
+  config.ssh.private_key_path = "<%= node[:vagrant][:ssh_private_key_path] %>"
+  <% end %>
+
+  <% if node[:vagrant][:provision] && node[:vagrant][:provision][:shell] %>
+  config.vm.provision :shell, 
+                      :path => "<%= node[:vagrant][:provision][:shell][:path] %>", 
+                      :args => "<%= node[:vagrant][:provision][:shell][:args] %>"
+  <% end %>
+
   config.vm.synced_folder ".", "/vagrant", :id => "vagrant-root", :disabled => true
 
   config.vm.provider :shell do |shell|
-    shell.script = ENV['SHELL_SCRIPT']
-    shell.run_args = [ ENV['SHELL_ARGS'] ]
+    shell.script = "<%= node[:vagrant][:shell_script] %>"
+    shell.run_args = "<%= node[:vagrant][:shell_args] %>"
   end
 end
 
