--- a/cookbooks/vagrant/templates/default/Vagrantfile.virtualbox.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.virtualbox.erb
@@ -1,11 +1,25 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "<%= node[:vagrant][:box] %>"
-  config.vm.base_mac = "<%= node[:vagrant][:base_mac] %>"
+
+  <% if node[:vagrant][:ssh_username] %>
+  config.ssh.username = "<%= node[:vagrant][:ssh_username] %>"
+  <% end %>
+
+  <% if node[:vagrant][:ssh_private_key_path] %>
+  config.ssh.private_key_path = "<%= node[:vagrant][:ssh_private_key_path] %>"
+  <% end %>
+
   <% if node[:vagrant][:provision] && node[:vagrant][:provision][:shell] %>
   config.vm.provision :shell, 
                       :path => "<%= node[:vagrant][:provision][:shell][:path] %>", 
                       :args => "<%= node[:vagrant][:provision][:shell][:args] %>"
   <% end %>
+
+  config.vm.synced_folder ".", "/vagrant", :id => "vagrant-root", :disabled => true
+
+  config.vm.provider :virtualbox do |virtualbox, override|
+    override.vm.base_mac = "<%= node[:vagrant][:base_mac] %>"
+  end
 end
 
 # vi: set ft=ruby :
