--- a/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
@@ -13,9 +13,9 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder ".", "/vagrant", :id => "vagrant-root", :disabled => true
 
-  config.vm.provider :ec2 do |ec2, override|
-    ec2.script = ec2.find_script(:ec2)
-    ec2.run_args = [ node[:vagrant][:keypair_name], node[:vagrant][:instance_type] ]
+  config.vm.provider :aws do |aws|
+    aws.keypair_name = "<%= node[:vagrant][:keypair_name] %>"
+    aws.instance_type = "<%= node[:vagrant][:instance_type] %>"
   end
 end
 
