--- a/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
@@ -17,6 +17,14 @@ Vagrant.configure("2") do |config|
     aws.keypair_name = "<%= node[:vagrant][:keypair_name] %>"
     aws.instance_type = "<%= node[:vagrant][:instance_type] %>"
     aws.region = ENV['AWS_DEFAULT_REGION'] || 'us-west-1'
+    aws.terminate_on_shutdown = true
+    aws.block_device_mapping = [
+      {
+        'DeviceName' => "/dev/sda1",
+        'Ebs.VolumeSize' => <%= node[:vagrant][:root_volume_size] %>,
+        'Ebs.DeleteOnTermination' => true
+      }
+    ]
   end
 end
 
