--- a/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
+++ b/cookbooks/vagrant/templates/default/Vagrantfile.aws.erb
@@ -13,7 +13,8 @@ Vagrant.configure("2") do |config|
 
   <% if node[:vagrant][:ssh_private_key_path] %>
   config.ssh.private_key_path = "<%= node[:vagrant][:ssh_private_key_path] %>"
-  config.ssh.insert_key = false
+  <% else %>
+  config.ssh.private_key_path = []
   <% end %>
 
   config.vm.synced_folder ".", "/vagrant", :id => "vagrant-root", :disabled => true
